[package]
name = "dedupx"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
clap = { version = "4.4", features = ["derive"] }
sha2 = "=0.10.9"
rayon = "1.10"
fs_extra = "1.2.0"
inquire="0.6.2"
blake3="1.8.2"
[dependencies.img_hash]
version = "3.0"
[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"